@@ -32,11 +32,6 @@
 #include <errno.h>
 extern int errno;
 #include <unistd.h>
-#ifdef W32_NATIVE
-/* FIXME: Use gnulib ftruncate module once it is ported to Win32. */
-#include <io.h>
-#define ftruncate _chsize
-#endif
 
 #include "gettext.h"
 #include "xalloc.h"
