@@ -1,4 +1,6 @@
 Version 1.0.0 (not yet released):
+- Removed ftruncate-for-W32 hack in uidls.c, because newer MinGW versions have
+  ftruncate().
 - Renamed README.win32 to README.w32. Updated README.w32 and README.dos.
 - Replace '#ifdef _WIN32' with '#ifdef W32_NATIVE', where W32_NATIVE is defined
   in config.h if the following is true:
